Update CompareRoute.java